<resources>
    <string name="app_name">LearningConstraintLayout</string>
    <string name="header">TODO</string>
    <string name="todo">TODO</string>
    <string name="_4_5">4.5</string>
    <string name="but_from_r129_99">But from R129.99</string>
    <string name="rent_from_r29_99">rent from r29.99</string>
    <string name="beauty_and_the_beast">Beauty and the Beast</string>
    <string name="march_2017_pg_129_miutes">March 2017 PG 129 miutes</string>
    <string name="the_story_and_characters_you_know_and_love_come_to_spectacular_life_in_the_live_action_adaption_og_disney_s_animated_classic_beauty_and_the_beast">The story and characters you know and love come to spectacular life in the live-action adaption og Disney\'s animated classic beauty and the Beast.</string>
    <string name="_242_ratings">242 ratings</string>
    <string name="family">Family</string>
    <string name="_71">71%</string>
    <string name="similar">Similar</string>
</resources>